--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-config-expo": "~9.2.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-react-native": "^5.0.0",
     "prettier": "^3.6.2",
     "typescript": "^5.3.3"
   }
