--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "predictive-maintenance",
-    "slug": "predictive-maintenance",
+    "name": "electricity-operations-maintenance",
+    "slug": "electricity-predictive-maintenance",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -24,13 +24,23 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser"
+    ],
     "experiments": {
       "typedRoutes": true
     },
     "android": {
       "package": "com.anonymous.predictivemaintenance",
       "softwareKeyboardLayoutMode": "resize"
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "14f801bc-0622-40d2-98f9-57a8819bdba0"
+      }
     }
   }
 }
