--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "predictive-maintenance",
+  "name": "FOE-Electricity-operartions-maintenance",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -24,7 +24,7 @@
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.8",
-    "expo-dev-client": "~6.0.12",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~14.0.8",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
