--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
+    "react-native-zoom-toolkit": "^5.0.1",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
